# statsutil

./: pyproject.toml
src/statsutil/: __init__.py  a.py
