[project]
name = "statsutil"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Lei Zhao", email = "8961794+leizha@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
statsutil = "statsutil:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
